--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 	<center>
 		<h3 id="hd3">Hit the Goal</h3>
 	</center>
-	<canvas width="1100" height="500" id="myCanvas">
-		</canvas>
+	<center><canvas width="1100" height="500" id="myCanvas">
+		</canvas></center>
 	<script src="main.js"></script>
 </body>
 </html>
